add personal websit link

--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,8 @@
 		<!-- p means paragraph -->
 		<div>
 			<h1>Shiwei Zhou</h1>
+			<a href="http://www.artishopi.com"> Here is my personal website </a>
+			<p>some random words wo show that i know how to edit</p>
 			<p>human-computer interaction &middot; social computing &middot; crowdsourcing</p>
 		</div>
 
